change of properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=fast-food
-spring.datasource.url=jdbc:postgresql://localhost:5432/my_db
-spring.datasource.username=admin_db
+spring.datasource.url=jdbc:postgresql://postgres:5432/my-db
+spring.datasource.username=admin
 spring.datasource.password=admin
 #spring.datasource.url=${DB_URL} my-db
 #spring.datasource.username=${DB_USERNAME} admin
