end of implementation

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,9 @@ services:
       - postgres-data:/var/lib/postgresql/data
     restart: always
     environment:
-      POSTGRES_USER: admin
+      POSTGRES_USER: admin_db
       POSTGRES_PASSWORD: admin
-      POSTGRES_DB: my-db
+      POSTGRES_DB: my_db
     networks:
       - app-network
 
@@ -27,8 +27,8 @@ services:
       - "8080:8080"
     restart: always
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/my-db
-      SPRING_DATASOURCE_USERNAME: admin
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/my_db
+      SPRING_DATASOURCE_USERNAME: admin_db
       SPRING_DATASOURCE_PASSWORD: admin
     networks:
       - app-network
