--- a/helm/services/database/postgres-pod.yaml
+++ b/helm/services/database/postgres-pod.yaml
@@ -10,3 +10,9 @@ spec:
       image: postgres:15.1-alpine
       ports:
         - containerPort: 5432
+      env:
+        - name: POSTGRES_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: db-opaque
+              key: POSTGRES_PASSWORD
