--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,21 @@
 spring.application.name=fast-food
-spring.datasource.url=${POSTGRES_URL:jdbc:postgresql://localhost:5432/my_db}
-spring.datasource.username=${POSTGRES_USER:admin_db}
-spring.datasource.password=${POSTGRES_PASSWORD:admin}
-#spring.datasource.url=${DB_URL} my-db
-#spring.datasource.username=${DB_USERNAME} admin
-#spring.datasource.password=${DB_PASSWORD}? admin
+#spring.datasource.url=${POSTGRES_URL:jdbc:postgresql://localhost:5432/my_db}
+#spring.datasource.username=${POSTGRES_USER:admin_db}
+#spring.datasource.password=${POSTGRES_PASSWORD:admin}
+#spring.datasource.url=${DB_URL}
+#spring.datasource.username=${DB_USERNAME}
+#spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
+#configuracao opcional para evitar erros de SSL no RDS (caso necessario)
+spring.datasource.hikari.maximum-pool-size=10
+
+
+#aws local com LocalStack
+aws.secretsmanager.endpoint=http://localhost:4566
+aws.region=us-east-1
+aws.secret-name=rds-credentials
+
+
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
