--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -10,7 +10,12 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-
+      - name: Configure Java 21
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'adopt'
+          java-version: '21'
+          cache: 'maven'
       - name: Package
         run: mvn package
 
