--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,17 @@
 			<version>20250107</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
