--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,7 +33,7 @@ jobs:
           distribution: 'adopt'
           package: '*.jar'
       - name: Publish package
-        run: mvn --batch-mode deploy
+        run: mvn --batch-mode --update-snapshots verify
 
   deploy-Prod:
     runs-on: ubuntu-latest
