--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,4 +1,4 @@
-# Configuração do banco de dados H2 para testes
+# ConfiguraÃ§Ã£o do banco de dados H2 para testes
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -6,10 +6,10 @@ spring.datasource.password=password
 spring.sql.init.platform=h2
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-# Impedir que o Hibernate gere um banco de dados real em produção
+# Impedir que o Hibernate gere um banco de dados real em produÃ§Ã£o
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 
-# Configuração de logging
+# ConfiguraÃ§Ã£o de logging
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql=TRACE
