--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -12,7 +12,14 @@ jobs:
         with:
           fetch-depth: 0
 
-      - run: mvn test
+      - name: Configure Java 21
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'adopt'
+          java-version: '21'
+          cache: 'maven'
+
+      - run: mvn install
 
       - name: Generate JaCoCo Badge
         id: jacoco
@@ -23,7 +30,7 @@ jobs:
           echo "branch coverage = ${{ steps.jacoco.outputs.branches }}"
 
       - name: Upload JaCoCo coverage report
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: jacoco-report
           path: target/site/jacoco/
@@ -58,7 +65,7 @@ jobs:
           distribution: 'adopt'
           package: '*.jar'
       - name: Publish package
-        run: mvn --batch-mode deploy
+        run: mvn --batch-mode --update-snapshots verify
 
   deploy-Prod:
     runs-on: ubuntu-latest
