--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -88,9 +88,9 @@ jobs:
           docker tag fast-food:latest 385515961485.dkr.ecr.us-east-1.amazonaws.com/fast-food:latest
           docker push 385515961485.dkr.ecr.us-east-1.amazonaws.com/fast-food:latest
 
-      - name: Dispatches Deploy on Infra Kubernetes Repository
-        run: |
-          curl -X POST -H "Authorization: token ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}" \
-          -H "Accept: application/vnd.github.v3+json" \
-          https://api.github.com/repos/beraldoLucca/fast-food-infra-kubernetes/actions/workflows/deploy.yml/dispatches \
-          -d '{"ref":"main"}'
+#      - name: Dispatches Deploy on Infra Kubernetes Repository
+#        run: |
+#          curl -X POST -H "Authorization: token ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}" \
+#          -H "Accept: application/vnd.github.v3+json" \
+#          https://api.github.com/repos/beraldoLucca/fast-food-infra-kubernetes/actions/workflows/deploy.yml/dispatches \
+#          -d '{"ref":"main"}'
