--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -50,8 +50,14 @@ jobs:
           distribution: 'adopt'
           java-version: '21'
           cache: 'maven'
-      - name: Package
-        run: mvn package
+      - name: Package and Build App
+        run: mvn clean package -DskipTests
+
+      - name: Upload JAR artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: fast-food-jar
+          path: target/*.jar
 
   publish:
     runs-on: ubuntu-latest
@@ -76,13 +82,15 @@ jobs:
       name: prod
     needs: publish
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
+      - name: Download Build Artifact
+        uses: actions/download-artifact@v4
         with:
-          fetch-depth: 0
+          name: fast-food-jar
+          path: target
 
-      - name: Verify File Structure
-        run: ls -R
+      - name: Verifying Artifacts Generated
+        run: ls -R target
 
       - name: Configure AWS
         uses: aws-actions/configure-aws-credentials@v2
