--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -89,7 +89,7 @@ jobs:
           name: fast-food-jar
           path: target
 
-      - name: Verifying Artifacts Generated
+      - name: Verifying the Artifacts Generated
         run: ls -R target
 
       - name: Configure AWS
