add payment service integration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.application.name=fast-food
 spring.datasource.driver-class-name=org.postgresql.Driver
 #configuracao opcional para evitar erros de SSL no RDS (caso necessario)
 spring.datasource.hikari.maximum-pool-size=10
-
+spring.profiles.active=test
 
 #aws local com LocalStack
 aws.secretsmanager.endpoint=http://localhost:4566
