--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,11 @@
 	</scm>
 	<properties>
 		<java.version>21</java.version>
+
+		<!-- SonarCloud -->
+		<sonar.projectKey>beraldolucca_fast-food</sonar.projectKey>
+		<sonar.organization>beraldolucca</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -168,6 +173,11 @@
 						</configuration>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.sonarsource.scanner.maven</groupId>
+				<artifactId>sonar-maven-plugin</artifactId>
+				<version>3.11.0.3922</version> <!-- versão atual até maio de 2025 -->
 			</plugin>
 		</plugins>
 	</build>
