--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -64,68 +64,68 @@ jobs:
           name: fast-food-jar
           path: target/*.jar
 
-  publish:
-    runs-on: ubuntu-latest
-    needs: build
-    permissions:
-      contents: read
-      packages: write
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
-        with:
-          java-version: '21'
-          distribution: 'adopt'
-          package: '*.jar'
-      - name: Publish package
-        run: mvn --batch-mode --update-snapshots verify
-
-  deploy-Prod:
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
-    environment:
-      name: prod
-    needs: publish
-    steps:
-      - uses: actions/checkout@v4
-      - name: Download Build Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: fast-food-jar
-          path: target
-
-      - name: Verifying the Artifacts Generated
-        run: ls -R target
-
-      - name: Configure AWS
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
-          aws-region: us-east-1
-
-      - name: Create ECR Repository if not exists
-        run: |
-          aws ecr describe-repositories --repository-names fast-food --region us-east-1 || \
-          aws ecr create-repository --repository-name fast-food --region us-east-1
-
-      - name: Login to AWS ECR
-        run: |
-          aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 528465521739.dkr.ecr.us-east-1.amazonaws.com
-
-      - name: Build Docker Image
-        run: docker build -t fast-food .
-
-      - name: Tag Docker Image
-        run: docker tag fast-food:latest 528465521739.dkr.ecr.us-east-1.amazonaws.com/fast-food:latest
-
-      - name: Push Docker Image to ECR
-        run: docker push 528465521739.dkr.ecr.us-east-1.amazonaws.com/fast-food:latest
-
-      - name: Dispatches Deploy on Infra Kubernetes Repository
-        run: |
-          curl -X POST -H "Authorization: token ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}" \
-          -H "Accept: application/vnd.github.v3+json" \
-          https://api.github.com/repos/beraldoLucca/fast-food-infra-kubernetes/actions/workflows/deploy.yml/dispatches \
-          -d '{"ref":"main"}'
+#  publish:
+#    runs-on: ubuntu-latest
+#    needs: build
+#    permissions:
+#      contents: read
+#      packages: write
+#    steps:
+#      - uses: actions/checkout@v3
+#      - uses: actions/setup-java@v3
+#        with:
+#          java-version: '21'
+#          distribution: 'adopt'
+#          package: '*.jar'
+#      - name: Publish package
+#        run: mvn --batch-mode --update-snapshots verify
+#
+#  deploy-Prod:
+#    runs-on: ubuntu-latest
+#    if: github.ref == 'refs/heads/main'
+#    environment:
+#      name: prod
+#    needs: publish
+#    steps:
+#      - uses: actions/checkout@v4
+#      - name: Download Build Artifact
+#        uses: actions/download-artifact@v4
+#        with:
+#          name: fast-food-jar
+#          path: target
+#
+#      - name: Verifying the Artifacts Generated
+#        run: ls -R target
+#
+#      - name: Configure AWS
+#        uses: aws-actions/configure-aws-credentials@v2
+#        with:
+#          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
+#          aws-region: us-east-1
+#
+#      - name: Create ECR Repository if not exists
+#        run: |
+#          aws ecr describe-repositories --repository-names fast-food --region us-east-1 || \
+#          aws ecr create-repository --repository-name fast-food --region us-east-1
+#
+#      - name: Login to AWS ECR
+#        run: |
+#          aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 528465521739.dkr.ecr.us-east-1.amazonaws.com
+#
+#      - name: Build Docker Image
+#        run: docker build -t fast-food .
+#
+#      - name: Tag Docker Image
+#        run: docker tag fast-food:latest 528465521739.dkr.ecr.us-east-1.amazonaws.com/fast-food:latest
+#
+#      - name: Push Docker Image to ECR
+#        run: docker push 528465521739.dkr.ecr.us-east-1.amazonaws.com/fast-food:latest
+#
+#      - name: Dispatches Deploy on Infra Kubernetes Repository
+#        run: |
+#          curl -X POST -H "Authorization: token ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}" \
+#          -H "Accept: application/vnd.github.v3+json" \
+#          https://api.github.com/repos/beraldoLucca/fast-food-infra-kubernetes/actions/workflows/deploy.yml/dispatches \
+#          -d '{"ref":"main"}'
